src/xwayland/dnd.cpp
@@ -152,6 +152,11 @@ void Dnd::startDrag()
     m_currentDrag = new WlToXDrag();
     auto source = new WlSource(this);
     source->setDataSourceIface(dragSource);
+     connect(dragSource, &KWaylandServer::AbstractDataSource::aboutToBeDestroyed, this, [this, source] {
+        if (source == wlSource()) {
+            setWlSource(nullptr);
+        }
+    });
     setWlSource(source);
     ownSelection(true);
 }
@@ -160,13 +165,9 @@ void Dnd::endDrag()
 {
     Q_ASSERT(m_currentDrag);
 
-    if (qobject_cast<WlToXDrag *>(m_currentDrag)) {
-        delete m_currentDrag;
-        setWlSource(nullptr);
-    } else {
-        connect(m_currentDrag, &Drag::finish, this, &Dnd::clearOldDrag);
-        m_oldDrags << m_currentDrag;
-    }
+    connect(m_currentDrag, &Drag::finish, this, &Dnd::clearOldDrag);
+    m_oldDrags << m_currentDrag;
+
     m_currentDrag = nullptr;
 }
 
